# shikumi

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  LICENSE  README.md  crate-hashes.json  flake.nix
.github/workflows/: auto-release.yml
docs/: PROGRESSIVE-DISCOVERY-VERIFICATION.md
docs/rfcs/: 0001-native-vault-sdks-via-forge-gen.md
src/: cli.rs  coverage.rs  cube.rs  discovered.rs  discovery.rs  error.rs  hotswap.rs  kube_discovery.rs  lib.rs  lisp_provider.rs  macros.rs  nix_provider.rs  observatory.rs  provider.rs  reload.rs  secret.rs  secret_client.rs  source.rs  store.rs  tiered.rs  watcher.rs
tests/: dispatcher_registration.rs
