[package]
name = "shikumi"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Shikumi (仕組み) — config discovery, hot-reload, and ArcSwap store for Nix-managed desktop apps"
homepage = "https://github.com/pleme-io/shikumi"
repository = "https://github.com/pleme-io/shikumi"
readme = "README.md"
license = "MIT"
categories = ["config"]
keywords = ["config", "hot-reload", "nix", "figment", "arcswap"]

[lints.clippy]
pedantic = "warn"

[dependencies]
arc-swap = "1.8"
figment = { version = "0.10", features = ["env", "yaml", "toml"] }
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
